--- a/src/userChrome.au.scss
+++ b/src/userChrome.au.scss
@@ -22,12 +22,18 @@
 
 #tabbrowser-arrowscrollbox {
   &::part(scrollbox) {
-    padding-inline-start: var(--tab-bottom-radius);
+    padding-inline-start: var(--mf-tab-bottom-radius);
   }
 
   &::part(scrollbutton-down),
   &::part(scrollbutton-up) {
     margin-block-start: var(--mf-tab-margin-top) !important;
+  }
+}
+
+#pinned-tabs-container {
+  &::part(scrollbox) {
+    padding-inline: var(--mf-tab-bottom-radius);
   }
 }
 
